--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
 	</head>
 
 	<body>
-		<header class="header">
-			<div class="container">
+		<header class="header-background">
+			<div class="container container-nav">
 				<h2 class="header-logo">
 					<a class="header-logo-link" href="index.html" target="_self"
 						><span class="web-header-logo-link">Web</span>Studio</a
@@ -42,7 +42,7 @@
 		</header>
 
 		<main>
-			<div class="back-container">
+			<div class="container">
 				<aside>
 					<ul class="aside-list">
 						<li>
@@ -211,19 +211,21 @@
 		</main>
 
 		<footer>
-			<h2 class="footer-logo footer-properties">
-				<a class="footer-logo-link" href="#"
-					><span class="web-footer-logo-link">Web</span
-					><span class="studio-footer-logo-link">Studio</span></a
+			<div class="container">
+				<h2 class="footer-logo footer-properties">
+					<a class="footer-logo-link" href="#"
+						><span class="web-footer-logo-link">Web</span
+						><span class="studio-footer-logo-link">Studio</span></a
+					>
+				</h2>
+				<address class="footer-properties">m. Warszawa, Aleje Jerozolimskie 21</address>
+				<a href="mailto:info@example.com" class="footer-contact footer-properties"
+					>info@example.com</a
 				>
-			</h2>
-			<address class="footer-properties">m. Warszawa, Aleje Jerozolimskie 21</address>
-			<a href="mailto:info@example.com" class="footer-contact footer-properties"
-				>info@example.com</a
-			>
-			<a href="tel:+48111111111" class="footer-contact footer-tel-contact footer-properties"
-				>+48 111 111 111</a
-			>
+				<a href="tel:+48111111111" class="footer-contact footer-tel-contact footer-properties"
+					>+48 111 111 111</a
+				>
+			</div>
 		</footer>
 	</body>
 </html>
