--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
 			</div>
 		</header>
 
-		<main>
+		<main class="main-background">
 			<div class="container">
-				<aside>
+				<aside class="aside-background">
 					<ul class="aside-list">
 						<li>
 							<button class="aside-list-button click" type="button">
