--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	</head>
 
 	<body>
-		<header>
-			<div class="container">
+		<header class="header-background">
+			<div class="container container-nav">
 				<h2 class="header-logo">
 					<a class="header-logo-link" href="index.html" target="_self"><span class="web-header-logo-link">Web</span>Studio</a>
 				</h2>
@@ -34,135 +34,133 @@
 			</div>
 		</header>
 
-		<main class="main">
+		<main>
 			<section class="solution-section">
-				<h1 class="solution-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-				<button class="button-solution click" type="button">Zamów usługę</button>
-			</section>
-			<ul class="service-list">
-				<li>
-					<h3 class="service-header">Lorem, ipsum.</h3>
-					<p class="service-description">
-						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-						totam, quia veniam harum repudiandae alias!
-					</p>
-				</li>
-
-				<li>
-					<h3 class="service-header">Lorem, ipsum.</h3>
-					<p class="service-description">
-						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-						totam, quia veniam harum repudiandae alias!
-					</p>
-				</li>
-				<li>
-					<h3 class="service-header">Lorem, ipsum.</h3>
-					<p class="service-description">
-						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-						totam, quia veniam harum repudiandae alias!
-					</p>
-				</li>
-				<li>
-					<h3 class="service-header">Lorem, ipsum.</h3>
-					<p class="service-description">
-						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-						totam, quia veniam harum repudiandae alias!
-					</p>
-				</li>
-			</ul>
-
-			<section>
-				<h2 class="specialize section-header">Czym się zajmujemy</h2>
-
-				<ul class="specialize-list">
+					<h1 class="solution-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+					<button class="button-solution click" type="button">Zamów usługę</button>
+				</section>
+			<div class="container">
+				<ul class="service-list">
 					<li>
-						<img
-							src="images/activities-comp.jpg"
-							alt="Pisanie kodu"
-							width="370"
-							height="294"
-						/>
+						<h3 class="service-header">Lorem, ipsum.</h3>
+						<p class="service-description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+							totam, quia veniam harum repudiandae alias!
+						</p>
 					</li>
 					<li>
-						<img
-							src="images/activities-phone.jpg"
-							alt="Osoba projektująca interface iOS"
-							width="370"
-							height="294"
-						/>
+						<h3 class="service-header">Lorem, ipsum.</h3>
+						<p class="service-description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+							totam, quia veniam harum repudiandae alias!
+						</p>
 					</li>
 					<li>
-						<img
-							src="images/activities-rgb.jpg"
-							alt="Paleta kolorów rgb"
-							width="370"
-							height="294"
-						/>
+						<h3 class="service-header">Lorem, ipsum.</h3>
+						<p class="service-description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+							totam, quia veniam harum repudiandae alias!
+						</p>
+					</li>
+					<li>
+						<h3 class="service-header">Lorem, ipsum.</h3>
+						<p class="service-description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+							totam, quia veniam harum repudiandae alias!
+						</p>
 					</li>
 				</ul>
-			</section>
-
-			<section>
-				<h2 class="team section-header">Nasz zespół</h2>
-				<ul class="team-list">
-					<li>
-						<figure>
+				<section>
+					<h2 class="specialize section-header">Czym się zajmujemy</h2>
+					<ul class="specialize-list">
+						<li>
 							<img
-								src="images/team-product-desiner.jpg"
-								alt="Projektant produktów"
-								width="270"
-								height="260"
+								src="images/activities-comp.jpg"
+								alt="Pisanie kodu"
+								width="370"
+								height="294"
 							/>
-							<figcaption>
-								<h4 class="team-name-header">John Doe</h4>
-								<p class="team-name-description">Product Designer</p>
-							</figcaption>
-						</figure>
-					</li>
-					<li>
-						<figure>
+						</li>
+						<li>
 							<img
-								src="images/team-frontend-developer.jpg"
-								alt="Programista frontend"
-								width="270"
-								height="260"
+								src="images/activities-phone.jpg"
+								alt="Osoba projektująca interface iOS"
+								width="370"
+								height="294"
 							/>
-							<figcaption>
-								<h4 class="team-name-header">John Doe</h4>
-								<p class="team-name-description">Frontend Developer</p>
-							</figcaption>
-						</figure>
-					</li>
-					<li>
-						<figure>
+						</li>
+						<li>
 							<img
-								src="images/team-marketing.jpg"
-								alt="Specjalista marketingu"
-								width="270"
-								height="260"
+								src="images/activities-rgb.jpg"
+								alt="Paleta kolorów rgb"
+								width="370"
+								height="294"
 							/>
-							<figcaption>
-								<h4 class="team-name-header">John Doe</h4>
-								<p class="team-name-description">Marketing</p>
-							</figcaption>
-						</figure>
-					</li>
-					<li>
-						<figure>
-							<img
-								src="images/team-ui-desiner.jpg"
-								alt="Projektant Interfejsu"
-								width="270"
-								height="260"
-							/>
-							<figcaption>
-								<h4 class="team-name-header">John Doe</h4>
-								<p class="team-name-description">UI Designer</p>
-							</figcaption>
-						</figure>
-					</li>
-				</ul>
-			</section>
+						</li>
+					</ul>
+				</section>
+				<section>
+					<h2 class="team section-header">Nasz zespół</h2>
+					<ul class="team-list">
+						<li>
+							<figure>
+								<img
+									src="images/team-product-desiner.jpg"
+									alt="Projektant produktów"
+									width="270"
+									height="260"
+								/>
+								<figcaption>
+									<h4 class="team-name-header">John Doe</h4>
+									<p class="team-name-description">Product Designer</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img
+									src="images/team-frontend-developer.jpg"
+									alt="Programista frontend"
+									width="270"
+									height="260"
+								/>
+								<figcaption>
+									<h4 class="team-name-header">John Doe</h4>
+									<p class="team-name-description">Frontend Developer</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img
+									src="images/team-marketing.jpg"
+									alt="Specjalista marketingu"
+									width="270"
+									height="260"
+								/>
+								<figcaption>
+									<h4 class="team-name-header">John Doe</h4>
+									<p class="team-name-description">Marketing</p>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img
+									src="images/team-ui-desiner.jpg"
+									alt="Projektant Interfejsu"
+									width="270"
+									height="260"
+								/>
+								<figcaption>
+									<h4 class="team-name-header">John Doe</h4>
+									<p class="team-name-description">UI Designer</p>
+								</figcaption>
+							</figure>
+						</li>
+					</ul>
+				</section>
+			</div>
 		</main>
 
 		<footer>
