change(index.html, portfolio.html, css)

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,12 @@
 						<li><a class="header-nav-link" href="#">Kontakt</a></li>
 					</ul>
 				</nav>
-				<a class="header-mail" href="mailto:info@devstudio.com"
-					>info@devstudio.com</a
-				>
-				<a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
+				<div class="contact-background">
+					<a class="header-mail" href="mailto:info@devstudio.com"
+						>info@devstudio.com</a
+					>
+					<a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
+				</div>
 			</div>
 		</header>
 
