--- a/index.html
+++ b/index.html
@@ -20,17 +20,27 @@
 		<header class="header-background">
 			<div class="container container-nav">
 				<h2 class="header-logo">
-					<a class="header-logo-link" href="index.html" target="_self"><span class="web-header-logo-link">Web</span>Studio</a>
+					<a class="header-logo-link" href="index.html" target="_self"
+						><span class="web-header-logo-link">Web</span>Studio</a
+					>
 				</h2>
 				<nav class="header-nav">
 					<ul class="nav-list">
 						<li><a class="header-nav-link" href="#">Agencja</a></li>
-						<li><a class="header-nav-link" href="portfolio.html" target="_self">Portfolio</a></li>
+						<li>
+							<a class="header-nav-link" href="portfolio.html" target="_self"
+								>Portfolio</a
+							>
+						</li>
 						<li><a class="header-nav-link" href="#">Kontakt</a></li>
 					</ul>
 				</nav>
-				<a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
+				<div class="contact-background">
+					<a class="header-mail" href="mailto:info@devstudio.com"
+						>info@devstudio.com</a
+					>
+					<a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
+				</div>
 			</div>
 		</header>
 
