--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
-		<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-		<link rel="stylesheet" href="modern-normalize.css">
+		<link
+			rel="stylesheet"
+			href="node_modules/modern-normalize/modern-normalize.css"
+		/>
+		<link rel="stylesheet" href="modern-normalize.css" />
 		<link href="css/styles.css" type="text/css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,138 +49,159 @@
 
 		<main>
 			<section class="solution-section">
-					<h1 class="solution-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-					<button class="button-solution click" type="button">Zamów usługę</button>
-				</section>
+				<h1 class="solution-header">
+					EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+				</h1>
+				<button class="button-solution click" type="button">
+					Zamów usługę
+				</button>
+			</section>
 			<div class="container">
-				<ul class="service-list">
-					<li>
-						<h3 class="service-header">Lorem, ipsum.</h3>
-						<p class="service-description">
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-							totam, quia veniam harum repudiandae alias!
-						</p>
-					</li>
-					<li>
-						<h3 class="service-header">Lorem, ipsum.</h3>
-						<p class="service-description">
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-							totam, quia veniam harum repudiandae alias!
-						</p>
-					</li>
-					<li>
-						<h3 class="service-header">Lorem, ipsum.</h3>
-						<p class="service-description">
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-							totam, quia veniam harum repudiandae alias!
-						</p>
-					</li>
-					<li>
-						<h3 class="service-header">Lorem, ipsum.</h3>
-						<p class="service-description">
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-							totam, quia veniam harum repudiandae alias!
-						</p>
-					</li>
-				</ul>
-				<section>
-					<h2 class="specialize section-header">Czym się zajmujemy</h2>
-					<ul class="specialize-list">
-						<li>
-							<img
-								src="images/activities-comp.jpg"
-								alt="Pisanie kodu"
-								width="370"
-								height="294"
-							/>
+				<section class="section">
+					<ul class="service-list">
+						<li class="service-list-item">
+							<h3 class="service-header">Lorem, ipsum.</h3>
+							<p class="service-description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+								arcu sem. Sed non sodales dui. Interdum et malesuada
+							</p>
 						</li>
-						<li>
-							<img
-								src="images/activities-phone.jpg"
-								alt="Osoba projektująca interface iOS"
-								width="370"
-								height="294"
-							/>
+						<li class="service-list-item">
+							<h3 class="service-header">Lorem, ipsum.</h3>
+							<p class="service-description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+								arcu sem. Sed non sodales dui. Interdum et malesuada
+							</p>
 						</li>
-						<li>
-							<img
-								src="images/activities-rgb.jpg"
-								alt="Paleta kolorów rgb"
-								width="370"
-								height="294"
-							/>
+						<li class="service-list-item">
+							<h3 class="service-header">Lorem, ipsum.</h3>
+							<p class="service-description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+								arcu sem. Sed non sodales dui. Interdum et malesuada
+							</p>
+						</li>
+						<li class="service-list-item">
+							<h3 class="service-header">Lorem, ipsum.</h3>
+							<p class="service-description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+								arcu sem. Sed non sodales dui. Interdum et malesuada
+							</p>
 						</li>
 					</ul>
+
+					<div class="container">
+						<h2 class="specialize section-header">Czym się zajmujemy</h2>
+						<ul class="specialize-list">
+							<li>
+								<img
+									src="images/activities-comp.jpg"
+									alt="Pisanie kodu"
+									width="370"
+									height="294"/>
+							</li>
+							<li>
+								<img
+									src="images/activities-phone.jpg"
+									alt="Osoba projektująca interface iOS"
+									width="370"
+									height="294"/>
+							</li>
+							<li>
+								<img
+									src="images/activities-rgb.jpg"
+									alt="Paleta kolorów rgb"
+									width="370"
+									height="294"/>
+							</li>
+						</ul>
+					</div>
 				</section>
-				<section>
-					<h2 class="team section-header">Nasz zespół</h2>
-					<ul class="team-list">
-						<li>
-							<figure>
-								<img
-									src="images/team-product-desiner.jpg"
-									alt="Projektant produktów"
-									width="270"
-									height="260"
-								/>
-								<figcaption>
-									<h4 class="team-name-header">John Doe</h4>
-									<p class="team-name-description">Product Designer</p>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<img
-									src="images/team-frontend-developer.jpg"
-									alt="Programista frontend"
-									width="270"
-									height="260"
-								/>
-								<figcaption>
-									<h4 class="team-name-header">John Doe</h4>
-									<p class="team-name-description">Frontend Developer</p>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<img
-									src="images/team-marketing.jpg"
-									alt="Specjalista marketingu"
-									width="270"
-									height="260"
-								/>
-								<figcaption>
-									<h4 class="team-name-header">John Doe</h4>
-									<p class="team-name-description">Marketing</p>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<img
-									src="images/team-ui-desiner.jpg"
-									alt="Projektant Interfejsu"
-									width="270"
-									height="260"
-								/>
-								<figcaption>
-									<h4 class="team-name-header">John Doe</h4>
-									<p class="team-name-description">UI Designer</p>
-								</figcaption>
-							</figure>
-						</li>
-					</ul>
-				</section>
+			</div>
+			<div class="team-background">
+				<div class="container">
+					<section class="section">
+						<h2 class="team section-header">Nasz zespół</h2>
+						<ul class="team-list">
+							<li>
+								<figure>
+									<img
+										src="images/team-product-desiner.jpg"
+										alt="Projektant produktów"
+										width="270"
+										height="260"/>
+									<figcaption class="team-block">
+										<h4 class="team-name-header">John Doe</h4>
+										<p class="team-name-description">Product Designer</p>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img
+										src="images/team-frontend-developer.jpg"
+										alt="Programista frontend"
+										width="270"
+										height="260"/>
+									<figcaption class="team-block">
+										<h4 class="team-name-header">John Doe</h4>
+										<p class="team-name-description">Frontend Developer</p>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img
+										src="images/team-marketing.jpg"
+										alt="Specjalista marketingu"
+										width="270"
+										height="260"/>
+									<figcaption class="team-block">
+										<h4 class="team-name-header">John Doe</h4>
+										<p class="team-name-description">Marketing</p>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img
+										src="images/team-ui-desiner.jpg"
+										alt="Projektant Interfejsu"
+										width="270"
+										height="260"
+									/>
+									<figcaption class="team-block">
+										<h4 class="team-name-header">John Doe</h4>
+										<p class="team-name-description">UI Designer</p>
+									</figcaption>
+								</figure>
+							</li>
+						</ul>
+					</section>
+				</div>
 			</div>
 		</main>
 
 		<footer>
-			<h2 class="footer-logo footer-properties"><a class="footer-logo-link" href="/"><span class="web-footer-logo-link">Web</span><span class="studio-footer-logo-link">Studio</span></a></h2>
-			<address  class="footer-properties">m. Warszawa, Aleje Jerozolimskie 21</address>
-			<a href="mailto:info@example.com" class="footer-contact footer-mail-contact footer-properties">info@example.com</a>
-			<a href="tel:+48111111111" class="footer-contact footer-tel-contact footer-properties">+48 111 111 111</a>
+			<div class="container">
+				<h2 class="footer-logo footer-properties">
+					<a class="footer-logo-link" href="#"
+						><span class="web-footer-logo-link">Web</span
+						><span class="studio-footer-logo-link">Studio</span></a
+					>
+				</h2>
+				<address class="footer-properties">
+					m. Warszawa, Aleje Jerozolimskie 21
+				</address>
+				<a
+					href="mailto:info@example.com"
+					class="footer-contact footer-properties"
+					>info@example.com
+					</a>
+				<a
+					href="tel:+48111111111"
+					class="footer-contact footer-tel-contact footer-properties"
+					>+48 111 111 111</a>
+			</div>
 		</footer>
 		<script src="main.js"></script>
 	</body>
