--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
 
 		<main>
 			<section class="solution-section">
-				<h1 class="solution-header">
-					EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
-				</h1>
-				<button class="button-solution click" type="button">
-					Zamów usługę
-				</button>
+				<div class="container">
+					<h1 class="solution-header">
+						EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+					</h1>
+					<button class="button-solution click" type="button">
+						Zamów usługę
+					</button>
+				</div>
 			</section>
 			<div class="container">
 				<section class="section">
